# Mnemo-MD

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml  desktop-release.yml
docs/: BRAND.md
public/: manifest.webmanifest  sw.js
scripts/: generate-icons.mjs
src/: App.tsx  index.css  main.tsx  store.tsx  types.ts  ui.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BrandMark.tsx  ConnectionsPanel.tsx  Disclaimer.tsx  EvidencePanel.tsx  GeneratorPage.tsx  InstallButton.tsx  ModeBar.tsx  PagesHero.tsx  PromptWorkspace.tsx  Sidebar.tsx  SourceSelect.tsx  StatusBadges.tsx
src/data/: sampleData.ts  templates.ts
src/lib/: adaptive.ts  apkg.ts  dates.ts  exporters.ts  ingest.ts  print.ts  promptGenerator.ts  retrieval.ts  srs.ts  storage.ts  weakness.ts
src/lib/ai/: oauth.ts  run.ts
src/pages/: AdaptiveExam.tsx  AnkiFactory.tsx  CramPlanner.tsx  Dashboard.tsx  Flashcards.tsx  Guide.tsx  ImageMode.tsx  OutputVault.tsx  PracticeBuilder.tsx  Profile.tsx  PromptLab.tsx  Quiz.tsx  Settings.tsx  Sources.tsx  VerifiedAnswers.tsx  WeaknessTracker.tsx
